[gd_scene load_steps=5 format=3 uid="uid://xljnuuedrcyy"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_w3xm3"]
[ext_resource type="FontFile" uid="uid://cf40gpwdho05a" path="res://assets/CherryBombOne-Regular.ttf" id="1_xyxky"]

[sub_resource type="InputEventAction" id="InputEventAction_3sbpq"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_ia32y"]
events = [SubResource("InputEventAction_3sbpq")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_w3xm3")

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 359.0
offset_bottom = 211.0
theme_override_colors/font_shadow_color = Color(0.540266, 0.744403, 0.591181, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("1_xyxky")
theme_override_font_sizes/font_size = 140
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hpLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -359.0
offset_bottom = 211.0
grow_horizontal = 0
theme_override_colors/font_shadow_color = Color(0.540266, 0.744403, 0.591181, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("1_xyxky")
theme_override_font_sizes/font_size = 140
text = ":3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -717.0
offset_top = -215.5
offset_right = 717.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.541176, 0.745098, 0.592157, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("1_xyxky")
theme_override_font_sizes/font_size = 160
text = "Tchaff, dodge banans!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Guide" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -122.0
offset_right = 750.0
offset_bottom = -13.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.894118, 0.776471, 0.980392, 1)
theme_override_colors/font_shadow_color = Color(0.211765, 0.137255, 0.278431, 1)
theme_override_colors/font_outline_color = Color(0.211765, 0.137255, 0.278431, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/font = ExtResource("1_xyxky")
theme_override_font_sizes/font_size = 33
text = "WASD or arrow keys to move
Click Play, Space or Enter to start"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -331.5
offset_top = -495.0
offset_right = 331.5
offset_bottom = -197.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(264, 168)
size_flags_vertical = 0
theme_override_colors/font_hover_pressed_color = Color(0.772549, 0.423529, 0.960784, 1)
theme_override_colors/font_hover_color = Color(0.77184, 0.4224, 0.96, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.89438, 0.775619, 0.979018, 1)
theme_override_colors/font_outline_color = Color(0.21336, 0.1372, 0.28, 1)
theme_override_constants/outline_size = 67
theme_override_fonts/font = ExtResource("1_xyxky")
theme_override_font_sizes/font_size = 200
shortcut = SubResource("Shortcut_ia32y")
text = "PLAY"
flat = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
